// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditInventory Screen should match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#f5f5f5",
      "flex": 1,
      "padding": 20,
    }
  }
>
  <TextInput
    onChangeText={[Function]}
    placeholder="Name"
    style={
      {
        "backgroundColor": "#fff",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 50,
        "marginBottom": 16,
        "paddingHorizontal": 16,
      }
    }
    value="Test Item"
  />
  <TextInput
    keyboardType="numeric"
    onChangeText={[Function]}
    placeholder="Price"
    style={
      {
        "backgroundColor": "#fff",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 50,
        "marginBottom": 16,
        "paddingHorizontal": 16,
      }
    }
    value="10.99"
  />
  <TextInput
    keyboardType="numeric"
    onChangeText={[Function]}
    placeholder="Total Stock"
    style={
      {
        "backgroundColor": "#fff",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 50,
        "marginBottom": 16,
        "paddingHorizontal": 16,
      }
    }
    value="100"
  />
  <TextInput
    multiline={true}
    onChangeText={[Function]}
    placeholder="Description"
    style={
      {
        "backgroundColor": "#fff",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 50,
        "marginBottom": 16,
        "paddingHorizontal": 16,
      }
    }
    value="Test description"
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#2196F3",
        "borderRadius": 8,
        "marginTop": 16,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Save
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderColor": "#3c3c3c",
        "borderRadius": 8,
        "borderWidth": 0.2,
        "marginTop": 16,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ff4d4d",
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Delete
    </Text>
  </View>
</View>
`;

exports[`InventoryList Screen should match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#f9f9f9",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <RCTScrollView
    data={[]}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#2196F3",
        "borderRadius": 8,
        "marginTop": 16,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Add Item
    </Text>
  </View>
</View>
`;
